# supertelligence-backend

./: .gitignore  README.md  env.example  pyproject.toml
src/supertelligence_backend/: discord_bot.py  main.py  run.py
