[tool.poetry]
name = "supertelligence-backend"
version = "0.1.0"
description = ""
authors = ["eddy <eddy@example.com>"]
readme = "README.md"
packages = [{include = "supertelligence_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
discord-py = "^2.5.2"
openai = "^1.82.1"
python-multipart = "^0.0.20"
aiohttp = "^3.12.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
